fix alignment issue of cards

--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ p {
   flex-direction: column;
   align-items: flex-start;
   background-color: var(--White);
-  padding: 0 4rem 2rem 2rem;
+  padding: 0 3rem 2rem 2rem;
   border-radius: 10px;
   margin: auto;
 }
@@ -368,11 +368,14 @@ p {
   .stat__cards img {
     transform: translateY(0%);
   }
-  .stat .card {
+  .stat__cards .card {
     justify-content: center;
     align-items: center;
     gap: 1rem;
     padding-top: 2rem;
+    text-align: center;
+    padding: 2rem;
+    max-width: 600px;
   }
   .stat__top {
     width: 100%;
